--- a/simple_sinatra/simple_sinatra.html
+++ b/simple_sinatra/simple_sinatra.html
@@ -16,12 +16,12 @@
     </tr>
   </thead>
   <tbody>
-    <tr id='section-1'>
+    <tr id='section-&lt;em&gt;Part_of_&lt;a_href=&quot;http://itpwebdev.github.com&quot;&gt;ITP_Web_Dev_Workshop&lt;/a&gt;_Week_03_Ruby_+_HTTP_=_Sinatra.&lt;/em&gt;'>
       <td class=docs>
         <div class="pilwrap">
-          <a class="pilcrow" href="#section-1">&#182;</a>
+          <a class="pilcrow" href="#section-&lt;em&gt;Part_of_&lt;a_href=&quot;http://itpwebdev.github.com&quot;&gt;ITP_Web_Dev_Workshop&lt;/a&gt;_Week_03_Ruby_+_HTTP_=_Sinatra.&lt;/em&gt;">&#182;</a>
         </div>
-        <p><a href="http://www.sinatrarb.com/">Sinatra</a> is a DSL (domain specific language) for writing web apps in Ruby.</p>
+        <h4><em>Part of <a href="http://itpwebdev.github.com">ITP Web Dev Workshop</a> Week 03 Ruby + HTTP = Sinatra.</em></h4>
       </td>
       <td class=code>
         <div class='highlight'><pre></pre></div>
@@ -31,6 +31,17 @@
       <td class=docs>
         <div class="pilwrap">
           <a class="pilcrow" href="#section-2">&#182;</a>
+        </div>
+        <p><a href="http://www.sinatrarb.com/">Sinatra</a> is a DSL (domain specific language) for writing web apps in Ruby.</p>
+      </td>
+      <td class=code>
+        <div class='highlight'><pre></pre></div>
+      </td>
+    </tr>
+    <tr id='section-3'>
+      <td class=docs>
+        <div class="pilwrap">
+          <a class="pilcrow" href="#section-3">&#182;</a>
         </div>
         <p>To use Sinatra you first need Ruby.
 Then open up the Terminal and install Sinatra like so:</p>
@@ -49,10 +60,10 @@ Then open up the Terminal and install Sinatra like so:</p>
         <div class='highlight'><pre></pre></div>
       </td>
     </tr>
-    <tr id='section-3'>
+    <tr id='section-4'>
       <td class=docs>
         <div class="pilwrap">
-          <a class="pilcrow" href="#section-3">&#182;</a>
+          <a class="pilcrow" href="#section-4">&#182;</a>
         </div>
         <p>Tell Ruby to look at all of our gems first and then look for the Sinatra gem.</p>
       </td>
@@ -61,10 +72,10 @@ Then open up the Terminal and install Sinatra like so:</p>
 <span class="nb">require</span> <span class="s1">&#39;sinatra&#39;</span></pre></div>
       </td>
     </tr>
-    <tr id='section-4'>
+    <tr id='section-5'>
       <td class=docs>
         <div class="pilwrap">
-          <a class="pilcrow" href="#section-4">&#182;</a>
+          <a class="pilcrow" href="#section-5">&#182;</a>
         </div>
         <p>A web application would be terrible without any URLs.
 A URL is a route, it tells the server where to go.
@@ -76,10 +87,10 @@ the HTTP verb. We&rsquo;ll write the first route,
         <div class='highlight'><pre></pre></div>
       </td>
     </tr>
-    <tr id='section-5'>
+    <tr id='section-6'>
       <td class=docs>
         <div class="pilwrap">
-          <a class="pilcrow" href="#section-5">&#182;</a>
+          <a class="pilcrow" href="#section-6">&#182;</a>
         </div>
         <p><code>get</code> is the type of HTTP request. The other types are <code>post</code>,
 <code>put</code> and <code>delete</code>. The <code>&ldquo;/&rdquo;</code> tells Sinatra what to respond
@@ -89,10 +100,10 @@ to after the top level domain (.com, .net etc.).</p>
         <div class='highlight'><pre><span class="n">get</span> <span class="s2">&quot;/&quot;</span> <span class="k">do</span></pre></div>
       </td>
     </tr>
-    <tr id='section-6'>
+    <tr id='section-7'>
       <td class=docs>
         <div class="pilwrap">
-          <a class="pilcrow" href="#section-6">&#182;</a>
+          <a class="pilcrow" href="#section-7">&#182;</a>
         </div>
         <p>Inside the the block we can put pretty much any Ruby code.
 Like all Ruby blocks the last line of the block gets returned.</p>
@@ -101,10 +112,10 @@ Like all Ruby blocks the last line of the block gets returned.</p>
         <div class='highlight'><pre>  <span class="s2">&quot;Hello World!&quot;</span></pre></div>
       </td>
     </tr>
-    <tr id='section-7'>
+    <tr id='section-8'>
       <td class=docs>
         <div class="pilwrap">
-          <a class="pilcrow" href="#section-7">&#182;</a>
+          <a class="pilcrow" href="#section-8">&#182;</a>
         </div>
         <p>End the block</p>
       </td>
@@ -112,10 +123,10 @@ Like all Ruby blocks the last line of the block gets returned.</p>
         <div class='highlight'><pre><span class="k">end</span></pre></div>
       </td>
     </tr>
-    <tr id='section-8'>
+    <tr id='section-9'>
       <td class=docs>
         <div class="pilwrap">
-          <a class="pilcrow" href="#section-8">&#182;</a>
+          <a class="pilcrow" href="#section-9">&#182;</a>
         </div>
         <p>Now we&rsquo;ve got the simplest web app.
 Launch the application with </p>
@@ -124,10 +135,58 @@ Launch the application with </p>
 </code></pre>
 
 <p>Point your browser to <code>http://localhost:4567/</code></p>
-
       </td>
       <td class=code>
         <div class='highlight'><pre></pre></div>
+      </td>
+    </tr>
+    <tr id='section-10'>
+      <td class=docs>
+        <div class="pilwrap">
+          <a class="pilcrow" href="#section-10">&#182;</a>
+        </div>
+        <p>A web app with only one page is pretty boring. Let&rsquo;s add another page.</p>
+      </td>
+      <td class=code>
+        <div class='highlight'><pre></pre></div>
+      </td>
+    </tr>
+    <tr id='section-11'>
+      <td class=docs>
+        <div class="pilwrap">
+          <a class="pilcrow" href="#section-11">&#182;</a>
+        </div>
+        <p>This is our about page, accessed through <code>http://localhost:4567/about</code>.</p>
+      </td>
+      <td class=code>
+        <div class='highlight'><pre><span class="n">get</span> <span class="s2">&quot;/about&quot;</span> <span class="k">do</span></pre></div>
+      </td>
+    </tr>
+    <tr id='section-12'>
+      <td class=docs>
+        <div class="pilwrap">
+          <a class="pilcrow" href="#section-12">&#182;</a>
+        </div>
+        <p>We&rsquo;ll use some HTML markup here. Since Ruby only returns the last
+line of a block we&rsquo;ll save our desired output to a variable <code>output</code>.</p>
+      </td>
+      <td class=code>
+        <div class='highlight'><pre>  <span class="n">output</span> <span class="o">=</span> <span class="s2">&quot;&lt;h1&gt;About&lt;/h1&gt;&quot;</span>
+  <span class="n">output</span> <span class="o">+=</span> <span class="s2">&quot;&lt;p&gt;I wrote this web page with Sinatra, and no templates.&lt;/p&gt;&quot;</span>
+  <span class="n">output</span> <span class="o">+=</span> <span class="s2">&quot;&lt;p&gt;Thus it was rather grueling to write html.&lt;/p&gt;&quot;</span></pre></div>
+      </td>
+    </tr>
+    <tr id='section-13'>
+      <td class=docs>
+        <div class="pilwrap">
+          <a class="pilcrow" href="#section-13">&#182;</a>
+        </div>
+        <p>Then place <code>output</code> in the last line of the block.</p>
+
+      </td>
+      <td class=code>
+        <div class='highlight'><pre>  <span class="n">output</span>
+<span class="k">end</span></pre></div>
       </td>
     </tr>
   </table>
