--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           <a class="pilcrow" href="#section-2">&#182;</a>
         </div>
         <ul>
-<li><a href="/simple_sinatra/simple_sinatra.html">Sinatra Tutorial</a></li>
-<li><a href="/example_sinatra/app.html">Example Sinatra app created in class</a></li>
+<li><a href="/03-Intro-To-Ruby---HTTP/simple_sinatra/simple_sinatra.html">Sinatra Tutorial</a></li>
+<li><a href="/03-Intro-To-Ruby---HTTP/example_sinatra/app.html">Example Sinatra app created in class</a></li>
 </ul>
 
       </td>
